codegen/tests/run-pass/custom-content-type.rs
#![feature(plugin, custom_derive)]
#![plugin(rocket_codegen)]

extern crate rocket;

#[post("/", format = "application/x-custom")]
fn get() -> &'static str { "hi" }

fn main() { }
